update link github

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <dd class="col-sm-8">+62 812-9550-2720</dd>
               <dt class="col-sm-4">GitHub</dt>
               <dd class="col-sm-8">
-                <a href="https://contoh-portfolio.site" target="_blank"
-                  >contoh-portfolio.site</a
+                <a href="https://github.com/Fahrioktav/Tugas_CV_Fahri_Octavian.git" target="_blank"
+                  >https://github.com/Fahrioktav/Tugas_CV_Fahri_Octavian.git</a
                 >
               </dd>
               <dt class="col-sm-4">LinkedIn</dt>
